--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/themes": "^3.1.4",
     "next": "14.2.15",
     "next-auth": "^5.0.0-beta.22",
     "react": "^18",
