feat: add custom scope to auth

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 AUTH_SECRET=<random string: openssl rand -base64 32>
 AUTH_MICROSOFT_ENTRA_ID_ID=<copy Application (client) ID here>
 AUTH_MICROSOFT_ENTRA_ID_SECRET=<copy generated client secret value here>
+AUTH_MICROSOFT_ENTRA_ID_SCOPE="api://<app-registration-uri>/kontraktsportal"
 
 # Not setting this will default to common
 AUTH_MICROSOFT_ENTRA_ID_ISSUER="https://login.microsoftonline.com/[copy-the-tenant-id-here]/v2.0"
