--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/themes": "^3.1.4",
     "next": "15.0.1",
     "next-auth": "^5.0.0-beta.25",
+    "next-intl": "^3.23.5",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021"
   },
