--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest"
   },
   "dependencies": {
     "@opentelemetry/exporter-trace-otlp-http": "^0.54.0",
@@ -17,6 +18,7 @@
     "@radix-ui/themes": "^3.1.4",
     "next": "15.0.1",
     "next-auth": "^5.0.0-beta.25",
+    "next-intl": "^3.23.5",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021"
   },
@@ -26,7 +28,9 @@
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
-    "typescript": "^5"
+    "happy-dom": "^15.7.4",
+    "typescript": "^5",
+    "vitest": "^2.1.3"
   },
   "resolutions": {
     "@types/react": "npm:types-react@19.0.0-rc.1",
